<resources>
    <string name="app_name">My Budget</string>
    <string name="delete">DELETE</string>
    <string name="add_category">Add Category</string>
    <string name="categories">Categories</string>
    <string name="share">Share</string>
    <string name="charts">Charts</string>
    <string name="add_entry">Add Entry</string>
    <string name="update">Update</string>
    <string name="new_category_layout">The Category is in use. \nMove items to:</string>
    <string name="sub_category_layout">Add a standalone category or a subcategory:</string>
    <string name="description_dialog_title">Add/Edit description to your expense:</string>
    <string name="new_category">New category</string>
    <string name="existing_category">Existing category</string>
    <string name="standalone_category">A standalone category</string>
    <string name="sub_category">A subcategory of:</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="category_average">Average:  %1$s</string>
  <!--  <string name="monthly_total">Entire month total</string>-->
    <string name="category_total">Total:  %1$s</string>
    <string name="statistics">"Statistics for"  %1$s</string>
    <string name="statistics_summary">"You have spent"  %1$s "out of" %2$d planned</string>
    <string name="statistics_summary_no_target">"You have spent" %1$s</string>
    <string name="statistics_summary_exceed">"You have exceeded your planned limit of" %1$d "by" %2$d</string>
    <string name="total_sum">Total</string>
    <string name="pie_chart_choice">Monthly expenses</string>
    <string name="bar_chart_choice">All expenses</string>
    <string name="no_charts_data">I\'m sorry…\nThere are no expenses, thus…\nno statistics for you.</string>
    <string name="radio_categories">Categories</string>
    <string name="radio_subcategories">Subcategories</string>
    <string name="subcategories">Subcategories: </string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_expense">Add expense</string>
    <string name="date">Date</string>
    <string name="minimum_sum">Minimum:</string>
    <string name="maximum_sum">Maximum:</string>
    <string name="average_sum">Average:</string>
    <string name="daily_average_sum">Daily average:</string>
    <string name="sum">Sum:</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="expenses">Expenses:</string>
    <string name="show_more"><u>show more</u></string>
    <string name="show_less"><u>show less</u></string>
    <string name="planned_limit">Planned limit: </string>
    <string name="ratio">Sum/Limit ratio: </string>
</resources>
