<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/application_view_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:visibility="invisible">

    <TextView
        android:id="@+id/statistics_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:fontFamily="@font/apollo_family"
        android:textColor="?attr/colorSecondary"
        android:textSize="10pt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_txt"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/average_sum"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_header" />

    <TextView
        android:id="@+id/average_val"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:textSize="7pt"
        app:layout_constraintStart_toEndOf="@+id/average_txt"
        app:layout_constraintTop_toBottomOf="@+id/statistics_header" />

    <TextView
        android:id="@+id/daily_average_txt"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/daily_average_sum"
        android:textSize="7pt"
        app:layout_constraintEnd_toStartOf="@+id/daily_average_val"
        app:layout_constraintTop_toBottomOf="@+id/statistics_header" />

    <TextView
        android:id="@+id/daily_average_val"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/average_txt" >

        <TextView
            android:id="@+id/sum_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            android:textSize="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sum_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintStart_toEndOf="@+id/sum_txt"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/target_txt"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/planned_limit"
            android:textSize="7pt"
            app:layout_constraintEnd_toStartOf="@+id/target_val"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/target_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/expenses_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textSize="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sum_txt"/>

        <TextView
            android:id="@+id/expenses_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintStart_toEndOf="@+id/expenses_txt"
            app:layout_constraintTop_toBottomOf="@+id/sum_val"/>

        <TextView
            android:id="@+id/ratio_txt"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/ratio"
            android:textSize="7pt"
            app:layout_constraintEnd_toStartOf="@+id/ratio_val"
            app:layout_constraintTop_toBottomOf="@+id/target_txt"/>

        <TextView
            android:id="@+id/ratio_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/target_val"/>

        <TextView
            android:id="@+id/minimum_sum_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/minimum_sum"
            android:textSize="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenses_txt" />

        <TextView
            android:id="@+id/minimum_sum_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintStart_toEndOf="@+id/minimum_sum_txt"
            app:layout_constraintTop_toBottomOf="@+id/expenses_val" />

        <TextView
            android:id="@+id/maximum_sum_txt"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/maximum_sum"
            android:textSize="7pt"
            app:layout_constraintEnd_toStartOf="@+id/maximum_sum_val"
            app:layout_constraintTop_toBottomOf="@+id/ratio_txt" />

        <TextView
            android:id="@+id/maximum_sum_val"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:textSize="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratio_val" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/summary_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="8pt"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/expandedLayout"
        app:layout_constraintBottom_toTopOf="@+id/spend_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/spend_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        app:layout_constraintBottom_toTopOf="@+id/more_layout"
        app:layout_constraintTop_toBottomOf="@id/summary_txt"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/more_layout"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spend_progress_bar">

        <TextView
            android:id="@+id/more_txt"
            android:layout_width="76dp"
            android:layout_height="15dp"
            android:text="@string/show_more"
            android:gravity="start"
            android:textColor="?attr/colorSecondary"
            android:textSize="7pt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/more_btn"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/icon_double_arrow_down"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/more_txt"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/less_layout"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spend_progress_bar">

        <TextView
            android:id="@+id/less_txt"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:text="@string/show_less"
            android:gravity="start"
            android:textColor="?attr/colorSecondary"
            android:textSize="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/less_btn"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/icon_double_arrow_up"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/less_txt"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
