<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/charts"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/data_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:id="@+id/header_layout">

            <LinearLayout
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:id="@+id/choice_layout">

                <TextView
                    android:id="@+id/pie_txt"
                    style="?toggleView"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center|center"
                    android:text="@string/pie_chart_choice" />

                <View
                    style="?separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/separator"/>

                <TextView
                    android:id="@+id/bar_txt"
                    style="?toggleView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center|center"
                    android:text="@string/bar_chart_choice" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pie_spinner_layout">

                    <Spinner
                        android:id="@+id/pieSpinner"
                        android:layout_centerInParent="true"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:dropDownVerticalOffset="-53dp"
                        android:spinnerMode="dropdown"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:id="@+id/bar_spinner_layout">

                    <Spinner
                        android:id="@+id/columnSpinner"
                        android:layout_centerInParent="true"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:dropDownVerticalOffset="-53dp"
                        android:spinnerMode="dropdown"/>

                </RelativeLayout>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/header_layout"
            android:id="@+id/charts_layout"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pie_layout">

                <com.github.mikephil.charting.charts.PieChart
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:id="@+id/pie_chart">

                </com.github.mikephil.charting.charts.PieChart>

                <RelativeLayout
                    android:id="@+id/radio_group"
                    android:layout_below="@+id/pie_chart"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/category_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_categories"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentStart="true"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/subcategory_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentEnd="true"
                        android:text="@string/radio_subcategories" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bar_layout">

                <com.github.mikephil.charting.charts.BarChart
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/bar_chart">

                </com.github.mikephil.charting.charts.BarChart>
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_data_layout">

        <TextView
            android:id="@+id/no_data_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center|center"
            android:textSize="12pt"
            android:textColor="@color/red"
            android:text="@string/no_charts_data" />
    </RelativeLayout>

</LinearLayout>