<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_category_form_layout"
        android:padding="20dp"
        style="?borderedBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:minHeight="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/category_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.3"
            android:text="@string/category"
            android:textSize="8pt"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.65"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:drawSelectorOnTop="true"
            android:dropDownVerticalOffset="-53dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintWidth_percent="0.3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/amount"
            android:textSize="8pt"
            app:layout_constraintBottom_toBottomOf="@+id/category_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/description_txt" />

        <EditText
            android:id="@+id/amount_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.65"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/description_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/amount_txt"
            app:layout_constraintTop_toBottomOf="@+id/category_spinner"
            app:layout_constraintVertical_bias="0.458" />

        <TextView
            android:id="@+id/description_txt"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.3"
            android:layout_gravity="center"
            android:text="@string/description"
            android:textSize="8pt"
            app:layout_constraintBottom_toBottomOf="@+id/amount_txt"
            app:layout_constraintEnd_toStartOf="@+id/description_edit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_button" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.65"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/add_expense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>